# luks-tray

./: .gitignore  README.md  pyproject.toml  test-app
luks_tray/: main.py
src/luks_tray/: History.py  IniTool.py  main.py
